tests/fail/semantic/subscript_integer-2.tiger
let
      var x : string := "Hello"
      var y := int [2] of 0
in
      y[x] := 1
end
